--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -436,7 +436,7 @@
   <string name="MESSAGES_DELETE_ICON_MES">アイコンとメッセージを削除する</string>
   <string name="MESSAGES_DELETE_ICON_POP">アイコンと関連するすべてのメッセージを削除しますか？</string>
   <string name="MESSAGES_DELETE_POP">顔と関連するすべてのメッセージを削除しますか？</string>
-  <string name="MESSAGES_EXPLAIN">画像例：</string>
+  <string name="MESSAGES_EXPLAIN">画像例</string>
   <string name="MESSAGES_FACE_ANALYSIS">旅客流量分析</string>
   <string name="MESSAGES_FACE_IDENTIFY">識別する</string>
   <string name="MESSAGES_FACE_INFO">顔情報</string>
