--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -436,7 +436,7 @@
   <string name="MESSAGES_DELETE_ICON_MES">Delete icon and messages</string>
   <string name="MESSAGES_DELETE_ICON_POP">Delete the icon and all related messages?</string>
   <string name="MESSAGES_DELETE_POP">Delete the face and all related messages?</string>
-  <string name="MESSAGES_EXPLAIN">Picture Example:</string>
+  <string name="MESSAGES_EXPLAIN">Picture Example</string>
   <string name="MESSAGES_FACE_ANALYSIS">Passenger flow analysis</string>
   <string name="MESSAGES_FACE_IDENTIFY">Identify</string>
   <string name="MESSAGES_FACE_INFO">Face information</string>
