1.有线设备无网络 ssid 导致现在离线 bug 2.区域侦测有时候图像整体变小 bug 3.修复没有清晰度切换的设备直播是清晰度切换闪一下 bug 4.修复门铃直播对讲按钮置灰不可点击 bug 5.新增人脸删除接口 6.更新语言包,图标

--- a/app/src/_aidemo/res/values-ru/strings.xml
+++ b/app/src/_aidemo/res/values-ru/strings.xml
@@ -4,6 +4,6 @@
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">Я сделал что-то прохладное на 720°панорамный Cam, прийти и увидеть его!</string>
   <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
-  <string name="app_name">AIDemo</string>
+  <string name="app_name">AI Face</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
