--- a/app/src/_aidemo/res/values-pt/strings.xml
+++ b/app/src/_aidemo/res/values-pt/strings.xml
@@ -4,6 +4,6 @@
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">Eu fiz algo legal por 720°panorâmico Cam, venha ver!</string>
   <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
-  <string name="app_name">AIDemo</string>
+  <string name="app_name">AI Face</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
