--- a/app/src/_doby/res/values/strings.xml
+++ b/app/src/_doby/res/values/strings.xml
@@ -4,6 +4,6 @@
   <string name="Slogan">Smart Home, for better life</string>
   <string name="Tap1_Shared_Description">I made something cool by 720°Panoramic Cam,come &amp; see it!</string>
   <string name="Treaty_url">http://www.jfgou.com/app/DobyNew/treaty%s_en.html</string>
-  <string name="app_name">DobyNew</string>
+  <string name="app_name">AI Face</string>
   <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
 </resources>
