--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1158,6 +1158,7 @@
   <string name="WIFI_SET_3_1">Зайдите в телефоне в настройки->сети WLAN, выберите \"DOG-ML******\", подключиться. Пароль:11111111</string>
   <string name="WIFI_SET_4">Вернитесь к %s</string>
   <string name="WIFI_SET_5GTIPS">Примечание:5ГГц WiFi сигнал не включен сейчас</string>
+  <string name="WIFI_SET_AI">Зайдите в телефоне в настройки->сети WLAN, выберите \"AI-**-******\", подключиться. Пароль:11111111</string>
   <string name="WIFI_SET_RS">Зайдите в телефоне в настройки->сети WLAN, выберите \"RS-CAM******\", подключиться. Пароль:11111111</string>
   <string name="WIFI_SET_VER">Зайдите в телефоне в настройки->сети WLAN, выберите \"%s\", подключиться. Пароль:11111111</string>
   <string name="WIRED_GUIDE">Используйте сетевой кабель для подключения устройства и маршрутизатора, обеспечить устройство и APP использовать ту же сеть</string>
