--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1158,6 +1158,7 @@
   <string name="WIFI_SET_3_1">Bitte \"DOG-ML-******\" in Einstellung vom phone->WLAN wählen,wenn Passwort erforderlich, bitte 11111111 eingeben</string>
   <string name="WIFI_SET_4">Zurück zum %s</string>
   <string name="WIFI_SET_5GTIPS">Hinweis:Unterstützt nicht die 5GHz WiFi</string>
+  <string name="WIFI_SET_AI">Bitte \"AI-**-******\" in Einstellung vom phone->WLAN wählen, wenn Passwort erforderlich, bitte 11111111 eingeben</string>
   <string name="WIFI_SET_RS">Bitte \"RS-CAM-******\" in Einstellung vom phone->WLAN wählen,wenn Passwort erforderlich, bitte 11111111 eingeben</string>
   <string name="WIFI_SET_VER">Bitte \"%s\" in Einstellung vom phone->WLAN wählen,wenn Passwort erforderlich, bitte 11111111 eingeben</string>
   <string name="WIRED_GUIDE">Verwenden Sie Netzwerkkabel anschließen Gerät und Router, sicherzustellen, Gerät und APP verwendet gleiches Netzwerk</string>
