--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1158,6 +1158,7 @@
   <string name="WIFI_SET_3_1">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"DOG-ML-*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_4">Trở lại %s</string>
   <string name="WIFI_SET_5GTIPS">Lưu ý:5G WiFi chưa được bật</string>
+  <string name="WIFI_SET_AI">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"AI-**-*****\" kết nối phone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_RS">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"RS-CAM-*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_VER">Trong mục \"Cài đặt\"->\"WLAN\", chọn \"%s\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIRED_GUIDE">Sử dụng cáp mạng để kết nối thiết bị và bộ định tuyến, đảm bảo thiết bị và APP sử dụng cùng một mạng</string>
