--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Solo yo</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Público</string>
   <string name="FACE_COLLAPSE">Colapso</string>
+  <string name="FACE_MINSIZE">Tamaño mínimo de la cara</string>
+  <string name="FACE_MINSIZE_TIP">Cuanto mayor sea el valor, mayor será la precisión del reconocimiento</string>
   <string name="FACE_NOT_RECOGNIZED">Cara no reconocida</string>
   <string name="FACE_RECOGNITION">Reconocimiento facial</string>
   <string name="FAQ_SINA_WEIBO">No es compatible con Sina Weibo live video</string>
