--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Seulement moi</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Public</string>
   <string name="FACE_COLLAPSE">Effondrer</string>
+  <string name="FACE_MINSIZE">Visage taille minimale</string>
+  <string name="FACE_MINSIZE_TIP">La valeur plus grande, plus la précision de la reconnaissance</string>
   <string name="FACE_NOT_RECOGNIZED">Visage non reconnu</string>
   <string name="FACE_RECOGNITION">Reconnaissance de visage</string>
   <string name="FAQ_SINA_WEIBO">Ne prenez pas en charge la vidéo en direct de Sina Weibo</string>
