--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Hanya aku</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Publik</string>
   <string name="FACE_COLLAPSE">Jatuh</string>
+  <string name="FACE_MINSIZE">Ukuran minimum wajah</string>
+  <string name="FACE_MINSIZE_TIP">Nilai yang lebih besar, semakin tinggi akurasi pengakuan</string>
   <string name="FACE_NOT_RECOGNIZED">Wajah tidak dikenali</string>
   <string name="FACE_RECOGNITION">Pengenalan wajah</string>
   <string name="FAQ_SINA_WEIBO">Jangan mendukung Sina Weibo live video</string>
