--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Solo io</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">pubblico</string>
   <string name="FACE_COLLAPSE">Crollo</string>
+  <string name="FACE_MINSIZE">Faccia minima dimensione</string>
+  <string name="FACE_MINSIZE_TIP">Maggiore è il valore, maggiore è la precisione del riconoscimento</string>
   <string name="FACE_NOT_RECOGNIZED">Volto non riconosciuto</string>
   <string name="FACE_RECOGNITION">Riconoscimento facciale</string>
   <string name="FAQ_SINA_WEIBO">Non supportare il video live di Sina Weibo</string>
