--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">私だけ</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">公開</string>
   <string name="FACE_COLLAPSE">折りたたむ</string>
+  <string name="FACE_MINSIZE">フェイス最小サイズ</string>
+  <string name="FACE_MINSIZE_TIP">値が大きいほど、認識の高精度</string>
   <string name="FACE_NOT_RECOGNIZED">顔が認識されない</string>
   <string name="FACE_RECOGNITION">顔認識</string>
   <string name="FAQ_SINA_WEIBO">シーナブログのライブビデオをサポートしていない</string>
