--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Só eu</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Público</string>
   <string name="FACE_COLLAPSE">Colapso</string>
+  <string name="FACE_MINSIZE">Tamanho mínimo do rosto</string>
+  <string name="FACE_MINSIZE_TIP">Quanto maior o valor, maior a precisão do reconhecimento</string>
   <string name="FACE_NOT_RECOGNIZED">Face não reconhecida, tente novamente</string>
   <string name="FACE_RECOGNITION">Reconhecimento facial</string>
   <string name="FAQ_SINA_WEIBO">Não suporte o vídeo ao vivo do Sina Weibo</string>
