--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">chỉ tôi</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Công cộng</string>
   <string name="FACE_COLLAPSE">Sập</string>
+  <string name="FACE_MINSIZE">Mặt kích thước tối thiểu</string>
+  <string name="FACE_MINSIZE_TIP">Giá trị lớn hơn, càng cao tính chính xác của nhận</string>
   <string name="FACE_NOT_RECOGNIZED">Mặt không được công nhận</string>
   <string name="FACE_RECOGNITION">Nhận dạng khuôn mặt</string>
   <string name="FAQ_SINA_WEIBO">Không hỗ trợ Sina Weibo video trực tiếp</string>
