--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">僅自己</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">公開</string>
   <string name="FACE_COLLAPSE">收起</string>
+  <string name="FACE_MINSIZE">人臉最小尺寸</string>
+  <string name="FACE_MINSIZE_TIP">數值越大，人臉識別精準度越高</string>
   <string name="FACE_NOT_RECOGNIZED">人臉無法識別，請重試</string>
   <string name="FACE_RECOGNITION">人臉識別</string>
   <string name="FAQ_SINA_WEIBO">新浪微博無法直播</string>
