--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,6 +268,8 @@
   <string name="FACEBOOK_PERMISSIONS_ONLYME">Only me</string>
   <string name="FACEBOOK_PERMISSIONS_PUBLIC">Public</string>
   <string name="FACE_COLLAPSE">Collapse</string>
+  <string name="FACE_MINSIZE">Face minimum size</string>
+  <string name="FACE_MINSIZE_TIP">The larger value, the higher the accuracy of recognition</string>
   <string name="FACE_NOT_RECOGNIZED">Face not recognized, please try again</string>
   <string name="FACE_RECOGNITION">Face recognition</string>
   <string name="FAQ_SINA_WEIBO">Do not support Sina Weibo live video</string>
