--- a/app/src/_aiface/res/values-de/strings.xml
+++ b/app/src/_aiface/res/values-de/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Gestern</string>
   <string name="_720PanoramicCamera">720°Panorama Kamera</string>
   <string name="addvideo_searching">Suchen&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Weiterempfehlen</string>
   <string name="callto">Angerufen</string>
   <string name="camera_auth">Kamera</string>
