--- a/app/src/_aiface/res/values-fr/strings.xml
+++ b/app/src/_aiface/res/values-fr/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Hier</string>
   <string name="_720PanoramicCamera">720°Caméra panoramique</string>
   <string name="addvideo_searching">Recherche&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Partager</string>
   <string name="callto">Appel</string>
   <string name="camera_auth">Caméra</string>
