--- a/app/src/_aiface/res/values-in-rID/strings.xml
+++ b/app/src/_aiface/res/values-in-rID/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Kemarin</string>
   <string name="_720PanoramicCamera">720°Panoramic Kamera</string>
   <string name="addvideo_searching">Mencari&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Bagikan</string>
   <string name="callto">Panggil</string>
   <string name="camera_auth">Kamera</string>
