--- a/app/src/_aiface/res/values-it/strings.xml
+++ b/app/src/_aiface/res/values-it/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Ieri</string>
   <string name="_720PanoramicCamera">720°Panoramic Camera</string>
   <string name="addvideo_searching">Ricerca in corso&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Condividi con gli amici</string>
   <string name="callto">Chiama</string>
   <string name="camera_auth">Macchina fotografica</string>
