--- a/app/src/_aiface/res/values-ja/strings.xml
+++ b/app/src/_aiface/res/values-ja/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">昨日</string>
   <string name="_720PanoramicCamera">720°パノラマカメラ</string>
   <string name="addvideo_searching">发现中&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">シェア</string>
   <string name="callto">呼び出し</string>
   <string name="camera_auth">カメラ</string>
