--- a/app/src/_aiface/res/values-pt/strings.xml
+++ b/app/src/_aiface/res/values-pt/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Ontem</string>
   <string name="_720PanoramicCamera">720°Câmera Panorâmica</string>
   <string name="addvideo_searching">Buscando&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Compartilhar com amigos</string>
   <string name="callto">Chamada</string>
   <string name="camera_auth">Câmara</string>
