--- a/app/src/_aiface/res/values-ru/strings.xml
+++ b/app/src/_aiface/res/values-ru/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Вчера</string>
   <string name="_720PanoramicCamera">720°Панорамная камера</string>
   <string name="addvideo_searching">Поиск&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Поделиться</string>
   <string name="callto">Вызов</string>
   <string name="camera_auth">Камера</string>
