--- a/app/src/_aiface/res/values-tr-rTR/strings.xml
+++ b/app/src/_aiface/res/values-tr-rTR/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Dün</string>
   <string name="_720PanoramicCamera">720°Panoramik Kamera</string>
   <string name="addvideo_searching">Araştırılıyor&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Paylaş</string>
   <string name="callto">Çağrı</string>
   <string name="camera_auth">Kamera</string>
