--- a/app/src/_aiface/res/values-vi/strings.xml
+++ b/app/src/_aiface/res/values-vi/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Hôm qua</string>
   <string name="_720PanoramicCamera">720°Panoramic Camera</string>
   <string name="addvideo_searching">Đang tìm kiếm&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Chia sẻ</string>
   <string name="callto">Gọi</string>
   <string name="camera_auth">Camera</string>
