--- a/app/src/_aiface/res/values-es/strings.xml
+++ b/app/src/_aiface/res/values-es/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Ayer</string>
   <string name="_720PanoramicCamera">720°Cámara Panorámica</string>
   <string name="addvideo_searching">Buscando&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Software muy bueno, me ha gustado</string>
   <string name="callto">Llamada</string>
   <string name="camera_auth">Cámara</string>
