--- a/app/src/_aiface/res/values-pl/strings.xml
+++ b/app/src/_aiface/res/values-pl/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Wczoraj</string>
   <string name="_720PanoramicCamera">Kamera panoramiczna 720 °</string>
   <string name="addvideo_searching">Wyszukiwanie &#8230;</string>
-  <string name="app_name">加菲狗</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Poleć znajomym</string>
   <string name="callto">Zadzwoń</string>
   <string name="camera_auth">Kamera</string>
