--- a/app/src/_aiface/res/values-zh-rCN/strings.xml
+++ b/app/src/_aiface/res/values-zh-rCN/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">昨天</string>
   <string name="_720PanoramicCamera">720°全景摄像机</string>
   <string name="addvideo_searching">正在搜索&#8230;</string>
-  <string name="app_name">加菲狗</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">推荐给朋友</string>
   <string name="callto">呼叫</string>
   <string name="camera_auth">相机</string>
