--- a/app/src/_aiface/res/values/strings.xml
+++ b/app/src/_aiface/res/values/strings.xml
@@ -1186,7 +1186,7 @@
   <string name="Yesterday">Yesterday</string>
   <string name="_720PanoramicCamera">720°Panoramic Camera</string>
   <string name="addvideo_searching">Searching&#8230;</string>
-  <string name="app_name">Clever Dog</string>
+  <string name="app_name">AIFace</string>
   <string name="app_share">Recommend to friends</string>
   <string name="callto">Call</string>
   <string name="camera_auth">Camera</string>
